[package]
name = "jen_rx"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[dependencies]
nannou = { git = "https://github.com/nannou-org/nannou", branch = "v0.9" }

[replace]
"vulkano:0.11.1" = { git = "https://github.com/mitchmindtree/vulkano", branch = "nannou_patches" }
